--- a/index.html
+++ b/index.html
@@ -13,9 +13,20 @@
       </div>
       <button class="addOption">Add..</button>
     </div>
-      <button>Go!</button>
-      <div>
-       <img src=assets/images/question_mark.jpg alt="frågetecken" height=200 width=300/>
-    </div>
+    <div class="resultSection"></div>
+    <button>Go!</button>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script>
+      $(function() {
+        $('.resultSection').hide()
+
+        var add_option = function() {
+          $('.inputs').append('<input></input>')
+        }
+
+        $('.addOption').click(add_option)
+      })
+    </script>
   </body>
 </html>
